<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/delete_dialog_tip"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:textSize="13sp"
        android:textColor="@color/grey"
        android:background="@color/white"
        android:text="@string/delete_tip" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/background"
        android:layout_below="@+id/delete_dialog_tip"
        />

    <TextView
        android:id="@+id/delete_dialog_confirm"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:textSize="16sp"
        android:layout_below="@+id/delete_dialog_tip"
        android:background="@color/white"
        android:textColor="@color/red"
        android:layout_marginTop="1dp"
        android:text="@string/delete_dialog_confirm" />

    <TextView
        android:id="@+id/delete_dialog_cancle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/delete_dialog_confirm"
        android:background="@color/white"
        android:text="@string/map_dialog_cancle" />

</RelativeLayout>
