<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.mobile.info.ApproveInfo">


    <include
        android:id="@+id/title_bar"
        layout="@layout/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <include
        layout="@layout/other_layout"
        android:id="@+id/other_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_bar"

        />



    <RelativeLayout
        android:id="@+id/approve_info_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/other_layout"
        >
        <RelativeLayout
            android:id="@+id/link_back_info_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:visibility="gone"
          >
            <TextView
                android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textColor="@color/black"
                android:text="@string/link_back_num"
                android:textSize="15sp"/>
            <TextView
                android:id="@+id/link_back_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_toEndOf="@+id/text1"
                android:textColor="@color/grey"
                android:textSize="15sp"
                />

            <TextView
                android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_below="@+id/text1"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:text="@string/link_back_name"/>
            <TextView
                android:id="@+id/link_back_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_below="@+id/text1"
                android:layout_toEndOf="@+id/text2"
                android:textColor="@color/grey"
                android:textSize="15sp"
                />
            <TextView
                android:id="@+id/text3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_below="@+id/text2"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:text="@string/link_back_state"/>
            <TextView
                android:id="@+id/link_back_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_below="@+id/text2"
                android:layout_toEndOf="@+id/text3"
                android:textColor="@color/grey"
                android:textSize="15sp"
                />
            <TextView
                android:id="@+id/text4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_below="@+id/text3"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:text="@string/link_back_reason"/>
            <TextView
                android:id="@+id/link_back_reason"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_below="@+id/text3"
                android:layout_toEndOf="@+id/text4"
                android:textColor="@color/blue"
                android:textSize="15sp"
               />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/approve_info_list_layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
           >
            <include
                layout="@layout/title"
                android:id="@+id/title1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <ListView
                android:id="@+id/approve_info_document_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title1">

            </ListView>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/approve_info_list_layout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/approve_info_button_layout"
            android:layout_below="@+id/approve_info_list_layout1"
            android:visibility="gone"
            >
            <View
                android:id="@+id/textView1333"
                android:layout_width="6dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:background="@color/homeTitleBar"
                />
            <TextView
                android:id="@+id/title_text123"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/majorText"
                android:background="@color/white"
                android:textStyle="bold"
                android:textSize="17sp"
                android:padding="8dp"
                android:layout_marginStart="8dp"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/textView1333"
                android:layout_alignBaseline="@+id/textView1333"
                android:text="随附材料列表"
                />
            <View
                android:id="@+id/line123"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/background"
                android:layout_below="@+id/title_text123"/>

            <ListView
                android:id="@+id/approve_info_material_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/line123">
            </ListView>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/approve_info_button_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true">

        </LinearLayout>
    </RelativeLayout>


</RelativeLayout>