<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="true"
    tools:context=".ui.query.DataQueryPerson">


    <RelativeLayout
        android:id="@+id/data_query_person_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/data_query_layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"

            >

            <TextView
                android:id="@+id/data_query_name_tv"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:gravity="right"
                android:text="@string/data_query_person_person_name"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/data_query_person_name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/data_query_name_tv"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_toRightOf="@+id/data_query_name_tv"
                android:background="@drawable/edittext_shape"
                android:ellipsize="end"
                android:gravity="top"
                android:padding="5dp"
                android:textColor="@color/majorText"
                android:textSize="14sp" />

            <RelativeLayout
                android:id="@+id/layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/data_query_person_name_et"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/data_query_person_date_tv"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginBottom="20dp"
                    android:layout_marginStart="16dp"
                    android:gravity="right"
                    android:text="出生日期"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/data_query_person_date_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_toRightOf="@+id/data_query_person_date_tv"
                    android:background="@drawable/edittext_shape"
                    android:ellipsize="end"
                    android:gravity="top"
                    android:padding="5dp"
                    android:textColor="@color/majorText"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/data_query_person_resource_tv"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/data_query_person_date_tv"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="20dp"
                    android:gravity="right"
                    android:text="@string/data_query_person_resource"
                    android:textSize="15sp"
                    android:visibility="gone" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/data_query_person_date_et"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="12dp"
                    android:layout_toRightOf="@+id/data_query_person_resource_tv"
                    android:visibility="gone">


                    <CheckBox
                        android:id="@+id/checkBox_caseAssistant"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="办案平台" />

                    <CheckBox
                        android:id="@+id/checkBox_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="综合统计" />

                    <CheckBox
                        android:id="@+id/checkBox_transfer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="线索移交" />
                </LinearLayout>

            </RelativeLayout>


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/data_query_confirm_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/data_query_layout1"
            android:background="@color/background"
            android:padding="10dp">

            <Button
                android:id="@+id/data_query_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/blue_button_shape"
                android:text="@string/data_query_person_button"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/data_query_button"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:text="@string/data_query_tips" />

            <TextView
                android:id="@+id/data_query_no_data_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView7"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="没有查询到相关记录！"
                android:textColor="@color/red"
                android:textSize="18sp"
                android:visibility="gone" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/data_query_result_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/data_query_confirm_layout"
            android:visibility="gone">

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_alignParentTop="true"
                android:background="@color/background" />

            <include
                android:id="@+id/title"
                layout="@layout/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                />

            <ListView
                android:id="@+id/data_query_no_resource_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp">

            </ListView>

        </RelativeLayout>


        <ScrollView
            android:id="@+id/data_query_scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/data_query_result_layout"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/data_query_assistant_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/grey"
                        android:padding="5dp"
                        android:paddingStart="12dp"
                        android:text="办案平台"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <com.sinostar.assistant.widget.MyListView
                        android:id="@+id/data_query_assistant_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/data_query_count_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/textView31"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/grey"
                        android:padding="5dp"
                        android:paddingStart="12dp"
                        android:text="综合统计"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <com.sinostar.assistant.widget.MyListView
                        android:id="@+id/data_query_count_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/data_query_transfer_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/textView13"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/grey"
                        android:padding="5dp"
                        android:paddingStart="12dp"
                        android:text="线索移交"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <com.sinostar.assistant.widget.MyListView
                        android:id="@+id/data_query_transfer_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>


            </LinearLayout>

        </ScrollView>

    </RelativeLayout>

</RelativeLayout>